--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
+
 html {
   box-sizing: border-box;
   -moz-text-size-adjust: 100%;
@@ -29,13 +35,34 @@ h1 {
 
 img {
   width: 100%;
+  padding-top: 1em;
 }
 
 a {
   border-radius: 4px;
-  padding: 0.5em 0.75em;
+  padding: .6em .75em;
   background-color: #555;
   text-decoration: none;
   color: #fff;
+
+}
+
+p {
+  margin-top: 0;
+}
+
+@media only screen and (min-width: 25em) {
+
+}
+
+@media only screen and (min-width: 38em) {
+
+}
+
+@media only screen and (min-width: 60em) {
+
+}
+
+@media only screen and (min-width: 90em) {
 
 }
