--- a/css/main.css
+++ b/css/main.css
@@ -13,14 +13,15 @@ html {
 
   font: normal 100%/1.3 sans-serif;
   background-color: #e2e2e2;
+  color: #000;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-section {
-  text-align: left;
+body {
+  margin: 0;
 }
 
 head {
@@ -28,41 +29,106 @@ head {
 }
 
 h1 {
-  color: #000;
-  font-weight: bold;
-
+  margin: 0;
 }
 
 img {
+  padding-bottom: 1rem;
+}
+
+.img-flex {
   width: 100%;
-  padding-top: 1em;
+  display: inline-block;
 }
 
 a {
   border-radius: 4px;
-  padding: .6em .75em;
+  display: inline-block;
+  padding: .5em .75em;
   background-color: #555;
   text-decoration: none;
   color: #fff;
+}
 
+a:hover {
+  background-color: #000;
+}
+
+.content {
+  padding: 1rem;
+}
+
+.info {
+  margin: 1rem 0;
 }
 
 p {
-  margin-top: 0;
+  margin: 0;
 }
 
 @media only screen and (min-width: 25em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
 
 }
 
 @media only screen and (min-width: 38em) {
 
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  .img-flex {
+    width: 50%;
+  }
+
+  section {
+    text-align: center;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+  }
+
+  .content {
+    display: inline-block;
+    text-align: left;
+    width: 50%;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
 
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  .img-flex {
+    padding-top: 2rem;
+    padding-bottom: 0;
+    vertical-align: middle;
+  }
+
+  .content {
+    vertical-align: middle;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
+  section {
+    padding-right: 8rem;
+    padding-left: 8rem;
+    max-width: 100%;
+  }
 
 }
