--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ html {
   text-size-adjust: 100%;
 
   font: normal 100%/1.3 sans-serif;
-  background-color: #e2e2e2;
   color: #000;
 }
 
@@ -28,6 +27,10 @@ head {
   display: none;
 }
 
+section {
+  background-color: #e2e2e2;
+}
+
 h1 {
   margin: 0;
 }
@@ -37,8 +40,8 @@ img {
 }
 
 .img-flex {
-  width: 100%;
   display: inline-block;
+  width: 100%;
 }
 
 a {
@@ -83,7 +86,7 @@ p {
   }
 
   .img-flex {
-    width: 50%;
+    width: 48%;
   }
 
   section {
@@ -95,7 +98,7 @@ p {
   .content {
     display: inline-block;
     text-align: left;
-    width: 50%;
+    width: 48%;
   }
 
 }
